{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 58,
  "lineage": "0317eb23-c260-ed2c-2766-008607f4ef56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c16ec2e0a58ffda",
            "domain": "vpc",
            "id": "eipalloc-03c16ec2e0a58ffda",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-97-144.compute-1.amazonaws.com",
            "public_ip": "52.22.97.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_jerusalem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:internet-gateway/igw-065e474e57d9c935b",
            "id": "igw-065e474e57d9c935b",
            "owner_id": "991925387373",
            "tags": {
              "CreatedAt": "2023-02-23",
              "Name": "pa-jerusalem-vpc-igw",
              "Owner": "Douglas"
            },
            "tags_all": {
              "CreatedAt": "2023-02-23",
              "Name": "pa-jerusalem-vpc-igw",
              "Owner": "Douglas"
            },
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c16ec2e0a58ffda",
            "connectivity_type": "public",
            "id": "nat-052e45f169abc3853",
            "network_interface_id": "eni-01426dbcae31de3d6",
            "private_ip": "10.0.1.110",
            "public_ip": "52.22.97.144",
            "subnet_id": "subnet-0c91f85f529678c42",
            "tags": {
              "Name": "pa-jerusalem-nat-public"
            },
            "tags_all": {
              "Name": "pa-jerusalem-nat-public"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.vpc_jerusalem",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:route-table/rtb-0427867f673d561d5",
            "id": "rtb-0427867f673d561d5",
            "owner_id": "991925387373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065e474e57d9c935b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-public"
            },
            "tags_all": {
              "Name": "rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_jerusalem",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:route-table/rtb-0acf25d7622b0207a",
            "id": "rtb-0acf25d7622b0207a",
            "owner_id": "991925387373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-052e45f169abc3853",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.vpc_jerusalem",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:route-table/rtb-0f94911ebf462baa0",
            "id": "rtb-0f94911ebf462baa0",
            "owner_id": "991925387373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-052e45f169abc3853",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-private1-us-east-1b"
            },
            "tags_all": {
              "Name": "rtb-private1-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.vpc_jerusalem",
            "aws_nat_gateway.nat",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c3b3705d149c930",
            "route_table_id": "rtb-0427867f673d561d5",
            "subnet_id": "subnet-0c91f85f529678c42"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_jerusalem",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2d7a787536eebc4",
            "route_table_id": "rtb-0acf25d7622b0207a",
            "subnet_id": "subnet-07235109585eb74a8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.vpc_jerusalem",
            "aws_nat_gateway.nat",
            "aws_route_table.rt2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0470a86a9bc23bea7",
            "route_table_id": "rtb-0427867f673d561d5",
            "subnet_id": "subnet-0a1b729e37c702e8e"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_jerusalem",
            "aws_route_table.rt1",
            "aws_subnet.subnet3",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbc37ff071ba6409",
            "route_table_id": "rtb-0f94911ebf462baa0",
            "subnet_id": "subnet-063bacc3dac1b1b45"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.vpc_jerusalem",
            "aws_nat_gateway.nat",
            "aws_route_table.rt3",
            "aws_subnet.subnet1",
            "aws_subnet.subnet4",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:security-group/sg-0f9199ae45b5ced86",
            "description": "Webserver network traffic",
            "egress": [],
            "id": "sg-0f9199ae45b5ced86",
            "ingress": [],
            "name": "terraform-sg-web",
            "name_prefix": "",
            "owner_id": "991925387373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform Sg"
            },
            "tags_all": {
              "Name": "Terraform Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_inbound_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH from anywhere",
            "from_port": 22,
            "id": "sgrule-2125459409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9199ae45b5ced86",
            "security_group_rule_id": "sgr-025a84fb1dafa4f8d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "80 from anywhere",
            "from_port": 80,
            "id": "sgrule-937053594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9199ae45b5ced86",
            "security_group_rule_id": "sgr-07c94819934d0554b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-741355717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9199ae45b5ced86",
            "security_group_rule_id": "sgr-06903f97c19853705",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver",
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-0c91f85f529678c42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c91f85f529678c42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-07235109585eb74a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07235109585eb74a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-1a",
              "Type": "Private"
            },
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-0a1b729e37c702e8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b729e37c702e8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "public-subnet-1b",
              "Type": "Public"
            },
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:subnet/subnet-063bacc3dac1b1b45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063bacc3dac1b1b45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "991925387373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1b",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "private-subnet-1b",
              "Type": "Private"
            },
            "vpc_id": "vpc-03a584b538ef7e8ee"
          },
          "dependencies": [
            "aws_vpc.vpc_jerusalem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_jerusalem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:991925387373:vpc/vpc-03a584b538ef7e8ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c25275ad166ac465",
            "default_route_table_id": "rtb-068c81ef8e938773f",
            "default_security_group_id": "sg-08766f00d3fb7e8c6",
            "dhcp_options_id": "dopt-03aaa6e5d00340c38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a584b538ef7e8ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068c81ef8e938773f",
            "owner_id": "991925387373",
            "tags": {
              "CreatedAt": "2024-02-23",
              "Name": "VPC PA Jerusalem",
              "Owner": "Douglas"
            },
            "tags_all": {
              "CreatedAt": "2024-02-23",
              "Name": "VPC PA Jerusalem",
              "Owner": "Douglas"
            }
          }
        }
      ]
    }
  ]
}